--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -19,18 +19,18 @@
    <!-- Main -->
    <main>
     <article>
-     <h2>And it will be helpful</h2>
-     <a><img src="https://64.media.tumblr.com/5a77e6e973365c9aada53cbeec969f0c/81cb7a4f6df5b0dc-0f/s500x750/9e77ac5d838842831148e498de83abcb3bee5814.gif" alt="holberton"></a>
+     <h2>It's important</h2>
+     <a><img src="https://twitter.com/MoHFW_INDIA/status/1701073640362828111" alt="health"></a>
     </article>
     <aside>
-     <p>There are many interesting things developed from here</p>
-<a>href="https://github.com/mbienaimee/alu-web-development/blob/master/html_basic/tweets.html">tweets.html homepage</a>
+     <p>There are many important things developed from here</p>
+<a>href="https://github.com/Ange-Mukundente/alu-web-development/blob/master/html_basic/tweets.html">tweets.html homepage</a>
     <p>I like it</p>
     </aside>
    </main>
    <footer>
-    <h3>I will do my best to achieve more</h3>
-    <p> Made by Marie Reine BIENAIMEE - <a href="index.html" target="_blank">here</a></p>
+    <h3>I will do all my best to achieve more</h3>
+    <p> Made by Ange Mukundente - <a href="index.html" target="_blank">here</a></p>
    </footer>
   </body>
 </html>
